<resources>
    <string name="app_name">FakePostGenerator</string>

    <string name="permission_denied">Permission Denied</string>
    <string name="allow_permission_from_app_setting">Permission is denied, Please allow permissions from App Settings.</string>
    <string name="please_enter_quote">Please enter the quote to proceed</string>

    <string name="your_recent_design">Recent Design</string>
    <string name="no_recent_files_are_available">No recent files are available</string>
    <string name="create_post">Create post</string>
    <string name="welcome_to">Welcome to</string>
    
    <string name="create">Create</string>
    <string name="new_post">New Post</string>
    <string name="review_post">Review Post</string>
    <string name="quote_post">Quote Post</string>
    <string name="enter_your_name">Please enter your name..</string>
    <string name="add_user_name">Please add user name</string>
    <string name="username_validation">Username consists of alphanumeric characters (a-z0-9),only lowercase</string>
    <string name="app_setting">App Settings</string>
    <string name="privacy_policy_of">Privacy Policy of</string>
    <string name="about">About</string>
    <string name="abour_point_1">• We are a team of passionate app developers,who love making things easy for our users</string>
    <string name="abour_point_2">• We believe in creating an app that is both easy to use and helps people connect with each other</string>
    <string name="abour_point_3">• Our Qmakerly app is packed with features that make it the best quote and content sharing app out there.</string>
    <string name="abour_point_4">• Qmakerly From creating quotes to sharing content, our app makes it easy for everyone to share their thoughts and ideas.</string>
    <string name="user_denied_permission">User denied Permissions</string>
    <string name="cancel">Cancel</string>
    <string name="terms_condition_of"><![CDATA[Terms & Condition of]]></string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="recent_design">Recent Design</string>



    <string name="is_post_liked_by_viewer">Is post liked by viewer?</string>
    <string name="is_someone_tagged">Is someone tagged?</string>
    <string name="has_an_instagram_story">Has an Instagram story?</string>
    <string name="comments">Comments</string>
    <string name="data_first_comment">%s %s</string>
    <string name="data_second_comment">%s %s</string>
    <string name="data_post_text">%s [%s]</string>
    <string name="share">Share</string>
    <string name="tweet_generator">Tweet generator</string>
    <string name="post_text_max_120_characters_will_be_seen">Post Text (max. 120 characters will be seen)</string>
    <string name="post_time">Post Time</string>
    <string name="post_date">Post Date</string>
    <string name="description">Description</string>
    <string name="verify">Verify</string>
    <string name="user_name">User Name</string>
    <string name="click_to_upload_post">Click to upload post</string>
    <string name="click_to_upload_user_image">Click to upload user image</string>
    <string name="instagram_post_generator">Instagram post generator</string>
    <string name="click_to_upload_tweet_image">Click to upload tweet image</string>
    <string name="tweet_date">Tweet Date</string>
    <string name="tweet_time">Tweet Time</string>
    <string name="reply_count">Reply Count</string>
    <string name="tweet_count">Tweet Count</string>
    <string name="like_count">Like Count</string>
    <string name="view_count">View Count</string>
    <string name="tweet_text">Tweet Text</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="online_status">Online Status</string>
    <string name="enter_name">Enter name</string>
    <string name="hide_header">Hide Header</string>
    <string name="hide_footer">Hide Footer</string>
    <string name="add">Add</string>
    <string name="message_break">Message Break</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="whatsapp_chat_generator">Whatsapp chat generator</string>
    <string name="done">Done</string>
    <string name="view_mode">View Mode</string>
    <string name="is_verify">Is Verify</string>
    <string name="omg_is_this_a_fake_facebook_post_damn_it_looks_so_real_start_building_your_own_use_the_settings_to_the_left_to_begin_you_can_also_add_comments_emoticons_wink"><![CDATA[Omg, is this a fake Facebook Post? Damn it looks so real! Start building your own. Use the settings to the left to begin - You can also add comments & emoticons Wink]]></string>
    <string name="view">View</string>
    <string name="edit">Edit :</string>
    <string name="post">Post :</string>
    <string name="visible_for">Visible for :</string>
    <string name="friends">Friends</string>
    <string name="public_">Public</string>
    <string name="social_media_post">Social media post</string>
    <string name="create_social_media_post">Create social Media Post</string>
    <string name="create_instagram_post">Create Instagram Post</string>
    <string name="create_facebook_post">Create Facebook Post</string>
    <string name="create_whatsapp_chat">Create Whatsapp Chat</string>
    <string name="create_twitter_post">Create Twitter Post</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="text_">Text</string>
    <string name="image_count">Image Count</string>
    <string name="comment_count">Comment Count</string>
    <string name="first_comment_username">First Comment Username</string>
    <string name="first_comment_text">First Comment Text</string>
    <string name="second_comment_username">Second Comment Username</string>
    <string name="second_comment_text">Second Comment Text</string>
    <string name="post_desciption">Post Desciption</string>
    <string name="break_msg">Break Chat</string>
    <string name="send_chat">Send Chat</string>
    <string name="receive_chat">Receive Chat</string>
    <string name="sender_chat">Sender Chat</string>
    <string name="is_msg_seen">Is Message seen ?</string>
    <string name="receiver_chat">Receiver Chat</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="online">Online</string>
    <string name="select_past_date">please select past time</string>
    <string name="three_dots">…</string>
    <string name="more">…more</string>
    <string name="enter_post_date">enter post date</string>
    <string name="enter_post_time">enter post time</string>
    <string name="enter_user_name">enter user name</string>
    <string name="enable_view_mode">Please enable View mode</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_date">enter date</string>
    <string name="enter_time">enter time</string>
    <string name="reaction">Reaction</string>
    <string name="facebook_post_generator">Facebook post generator</string>
    <string name="account_detail">Account Detail</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="name">Name</string>
    <string name="user_id">user id</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="save">Save</string>
</resources>