<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_25dp"
            android:paddingTop="@dimen/_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/about"
                android:textColor="@color/reg_text"
                android:textSize="@dimen/_20sp" />

            <ImageView
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_5dp"
                android:src="@drawable/ic_logo_text" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/imgCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_20dp"
            app:cardElevation="@dimen/_10dp">

            <!--android:background="@drawable/bg_icon"-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10dp"
                android:src="@drawable/ic_cancel" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@id/header"
        android:background="@color/grey_66" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/abour_point_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/abour_point_2"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/abour_point_3"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/abour_point_4"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/_30sp"
        android:textColor="@color/solid_33"
        android:textSize="@dimen/_20sp" />

</RelativeLayout>