<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetCamera"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_dialog"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/_15dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:visibility="gone">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/name"
                        android:textColor="@color/edt_text_color" />

                    <EditText
                        android:id="@+id/etName"
                        style="@style/CardShapeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:clipToPadding="false"
                        android:maxLength="30"
                        android:paddingHorizontal="@dimen/_5dp"
                        android:paddingVertical="@dimen/_10dp"
                        android:textColor="@color/et_text_color"
                        android:textSize="@dimen/_16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/user_name"
                        android:textColor="@color/edt_text_color" />

                    <EditText
                        android:id="@+id/etUserName"
                        style="@style/CardShapeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:clipToPadding="false"
                        android:maxLength="15"
                        android:paddingHorizontal="@dimen/_5dp"
                        android:paddingVertical="@dimen/_10dp"
                        android:textColor="@color/et_text_color"
                        android:textSize="@dimen/_16sp" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/lTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/tweet_date"
                        android:textColor="@color/edt_text_color" />

                    <EditText
                        android:id="@+id/etTweetDate"
                        style="@style/CardShapeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:clipToPadding="false"
                        android:clickable="true"
                        android:focusable="false"
                        android:paddingHorizontal="@dimen/_5dp"
                        android:paddingVertical="@dimen/_10dp"
                        android:textColor="@color/et_text_color"
                        android:textSize="@dimen/_16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_weight="1"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/tweet_time"
                        android:textColor="@color/edt_text_color"
                        android:textSize="@dimen/_16sp" />

                    <EditText
                        android:id="@+id/etTweetTime"
                        style="@style/CardShapeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:clipToPadding="false"
                        android:clickable="true"
                        android:focusable="false"
                        android:paddingHorizontal="@dimen/_5dp"
                        android:paddingVertical="@dimen/_10dp"
                        android:textColor="@color/et_text_color"
                        android:textSize="@dimen/_16sp" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/lDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tweet_text"
                    android:textColor="@color/edt_text_color" />

                <EditText
                    android:id="@+id/etDesc"
                    style="@style/CardShapeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:clipToPadding="false"
                    android:gravity="start"
                    android:lines="4"
                    android:paddingHorizontal="@dimen/_5dp"
                    android:paddingVertical="@dimen/_10dp"
                    android:text="This is a sample tweet. @mentions, #hashtags, https://links.com are all automatically converted."
                    android:textColor="@color/et_text_color"
                    android:textSize="@dimen/_16sp" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDone"
                style="@style/FullButton"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/done"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>