<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sp">


        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/your_recent_design"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sp" />


        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/imgMenu"
            android:src="@drawable/ic_delete"
            android:visibility="gone" />


        <androidx.cardview.widget.CardView
            android:id="@+id/imgMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_25dp"
            app:cardElevation="@dimen/_10dp">

            <!--android:background="@drawable/bg_icon"-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10dp"
                android:src="@drawable/ic_menu" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ad_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical">

    </LinearLayout>


<!--            <LinearLayout-->
<!--                android:id="@+id/layoutSelectAll"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_below="@id/header"-->
<!--                android:visibility="visible">-->

<!--                <CheckBox-->
<!--                    android:id="@+id/checkSelectAll"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Select All"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="@dimen/_18sp"-->
<!--                    android:fontFamily="@font/roboto_regular"/>-->

<!--            </LinearLayout>-->


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ad_linear">

    <ViewAnimator
        android:id="@+id/viewAnimator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/ivEmpty"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_no_data"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/no_data_found" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivEmpty"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:text="@string/no_recent_files_are_available"
                android:textColor="@color/transparent_black"
                android:textSize="@dimen/_16sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/create_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDesc"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/gradeint_btn"
                android:paddingHorizontal="@dimen/_30dp"
                android:text="@string/create_post"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />



        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecentPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </ViewAnimator>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>